messed with stuff and gave up

--- a/_includes/hero-banner-offerings.html
+++ b/_includes/hero-banner-offerings.html
@@ -1,25 +1,26 @@
-<section class="min-h-[90vh]">
+<section class="min-h-[90vh] text-center align-middle grid grid-cols-1 p-5p">
+    <h1>{{page.title}}</h1>
     <div class="text-container">
         <div class="text-item">
             <p>Embody <span class="font-serif">Radical Self Acceptance</span> & Embrace all Aspects of your Self</p>
         </div>
         <div class="text-item">
-            <p>Create Balance in your life & establish an unwavering Inner Anchor</p>
+            <p>Create <span class="font-serif">Balance</span> in your life & establish an unwavering <span class="font-serif">Inner Anchor</span></p>
         </div>
         <div class="text-item">
-            <p>Heal your relationship with your Emotions, through acknowledgement & expression</p>
+            <p>Heal your relationship with your <span class="font-serif">Emotions</span>, through acknowledgement & expression</p>
         </div>
         <div class="text-item">
-            <p>Feel supported in your journey by Connecting with women around the world</p>
+            <p>Feel supported in your journey by <span class="font-serif">Connecting</span> with women around the world</p>
         </div>
         <div class="text-item">
-            <p>Learn powerful Embodiment Practices & Life-changing Movement Tools</p>
+            <p>Learn powerful <span class="font-serif">Embodiment Practices</span> & Life-changing Movement Tools</p>
         </div>
         <div class="text-item">
-            <p>Heal and Grow through the Feminine Way focusing on Pleasure & Creativity</p>
+            <p>Heal and Grow through the <span class="font-serif">Feminine Way</span> focusing on Pleasure & Creativity</p>
         </div>
         <div class="text-item">
-            <p>Take back your Power, Know your Worth Become the Leader of your life</p>
+            <p>Take back your <span class="font-serif">Power</span>, Know your <span class="font-serif">Worth</span> Become the <span class="font-serif">Leader</span> of your life</p>
         </div>
     </div>
 </section>
