--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,11 +1,12 @@
-<section>
-    <h2>{{page.map.heading}}</h2>
-    <p>{{page.map.description}}</p>
-    <div class="grid grid-cols-2">
+<section class="p-10p">
+    <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
+    <p class="text-center">{{page.map.description}}</p>
+    <div class="grid grid-cols-2 divide-x-2 divide-feature">
         {% for item in page.map.offering %}
-        <div>
-            <h3>{{item.title}}</h3>
-            <span>{{item.type}}</span>
+        <div class="p-5p 
+        {% cycle 'text-right', 'text-left', 'text-right', text-left %}">
+            <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+            <span class="lowercase text-feature">{{item.type}}</span>
             <p>{{item.description}}</p>
             <a href="{{item.url}}">Learn more</a>
         </div>
