--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -560,8 +560,8 @@ ul {
 .text-lg-serif {
   margin-bottom: 1rem;
   font-family: modernline, serif;
-  font-size: 3rem;
-  line-height: 1;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
   font-weight: 200;
   line-height: 1.8em;
 }
@@ -750,8 +750,8 @@ ul {
 .h-\[10vh\] {
   height: 10vh;
 }
-.h-\[30vh\] {
-  height: 30vh;
+.h-\[90vh\] {
+  height: 90vh;
 }
 .min-h-\[20vh\] {
   min-height: 20vh;
@@ -789,6 +789,9 @@ ul {
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .items-center {
   align-items: center;
 }
@@ -813,6 +816,20 @@ ul {
 .gap-8 {
   gap: 2rem;
 }
+.divide-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
+}
+.divide-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(2px * var(--tw-divide-x-reverse));
+  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
+}
+.divide-feature > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(237 213 135 / var(--tw-divide-opacity));
+}
 .border {
   border-width: 1px;
 }
@@ -833,6 +850,10 @@ ul {
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
@@ -935,6 +956,9 @@ ul {
 }
 .font-serif {
   font-family: modernline, serif;
+}
+.lowercase {
+  text-transform: lowercase;
 }
 .italic {
   font-style: italic;
