--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -702,6 +702,9 @@ ul {
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -753,6 +756,9 @@ ul {
 .h-\[90vh\] {
   height: 90vh;
 }
+.h-28 {
+  height: 7rem;
+}
 .min-h-\[20vh\] {
   min-height: 20vh;
 }
@@ -791,6 +797,9 @@ ul {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .items-center {
   align-items: center;
