--- a/_includes/optin.html
+++ b/_includes/optin.html
@@ -1,9 +1,11 @@
-<section class="bg-image-style p-10p text-center" style="background-image: url('{{page.cta.background.background_image}}'); background-position: {{page.cta.background.background_position}};">
+<section class="bg-image-style bg-overlay p-10p text-center"
+    style="background-image: url('{{page.cta.background.background_image}}'); background-position: {{page.cta.background.background_position}};">
     <h2 class="heading-lg-sans text-feature">{{page.cta.heading_html}}</h2>
-    <h3 class="text-feature mb-4">{{page.cta.subtitle}}</h3>
-    <p>{{page.cta.description}}</p>
-    {% if page.type == e-book %}
+    <h3 class="text-feature lowercase mb-4">{{page.cta.subtitle}}</h3>
+    <p>{{page.cta.description_html}}</p>
+    {% if page.cta.type == 'e-book' %}
     {% include form-ebook.html %}
-    {% elsif page.type == workshop-reply %}
+    {% elsif page.cta.type == 'masterclass-reply' %}
+    {% include form-masterclass-replay.html %}
     {% endif %}
 </section>
