--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -789,6 +789,12 @@ ul {
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
 }
+.flex-row {
+  flex-direction: row;
+}
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
 .items-center {
   align-items: center;
 }
