--- a/_includes/map.html
+++ b/_includes/map.html
@@ -4,7 +4,7 @@
     <div class="grid grid-cols-12">
         {% for item in page.map.offering %}
         <div class="col-span-5 p-5p 
-        {% cycle 'text-right', 'text-left', 'text-right', text-left %}">
+        {% cycle 'text-right', 'text-left', 'text-right', 'text-left' %}">
             <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
             <span class="lowercase text-feature">{{item.type}}</span>
             <p>{{item.description}}</p>
