--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -729,6 +729,12 @@ ul {
 .mt-4 {
   margin-top: 1rem;
 }
+.mb-12 {
+  margin-bottom: 3rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
 .block {
   display: block;
 }
@@ -756,6 +762,9 @@ ul {
 .h-8 {
   height: 2rem;
 }
+.h-16 {
+  height: 4rem;
+}
 .min-h-\[20vh\] {
   min-height: 20vh;
 }
@@ -764,6 +773,9 @@ ul {
 }
 .min-h-\[90vh\] {
   min-height: 90vh;
+}
+.min-h-\[70vh\] {
+  min-height: 70vh;
 }
 .w-\[10vh\] {
   width: 10vh;
