--- a/_includes/description-course.html
+++ b/_includes/description-course.html
@@ -1,6 +1,6 @@
 <section class="p-10p">
     <div class="text-center mb-12">
-        <h2 class="heading-md-sans text-feature">{{page.course-description.heading}}</h2>
+        <h2 class="heading-lg-sans text-feature">{{page.course-description.heading}}</h2>
         <p>{{page.course-description.description}}</p>
     </div>
     {% for item in page.course-description.module %}
