--- a/_includes/who-its-for.html
+++ b/_includes/who-its-for.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style bg-[url('{{page.who-its-for.background_image}}')]">
-    <h2>{{page.heading.title}} is for</h2>
+<section class="bg-image-style bg-overlay p-10p text-center" style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}}">
+    <h2 class="heading-lg-sans">{{page.heading.title}} is for</h2>
     <p>{{page.who-its-for.description_html}}</p>
 </section>
