inside the course

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -738,6 +738,9 @@ ul {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .flex {
   display: flex;
 }
@@ -809,6 +812,9 @@ ul {
 }
 .items-center {
   align-items: center;
+}
+.justify-start {
+  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
