--- a/_includes/inside-the-course.html
+++ b/_includes/inside-the-course.html
@@ -1,7 +1,10 @@
-<section class="bg-image-style">
-    <h2>{{page.inside-the-course.heading}}</h2>
-    <p>{{page.inside-the-course.description_html}}</p>
-    <ul>
+<section class="p-10p bg-image-style"
+    style="background-image: url('{{page.inside-the-course.background-image.background_image}}'); background-position: {{page.inside-the-course.background-image.image_focus}};">
+    <div class="text-center">
+        <h2 class="heading-lg-sans text-feature">{{page.inside-the-course.heading}}</h2>
+        <p>{{page.inside-the-course.description_html}}</p>
+    </div>
+    <ul class="list-none">
         {% for item in page.inside-the-course.module %}
         <li x-data="{ open: false }" class="border-b border-white my-8">
             <button @click="open = ! open" class="flex justify-between w-full">
@@ -10,10 +13,13 @@
                 <span x-show="!open">→</span>
                 <span x-show="open">&nbsp;&nbsp;↓</span>
             </button>
-            <div x-show="open" @click.outside="open = false">
-                <p class="mb-8 mr-8 italic">{{item.description_html}}</p>
+            <div x-show="open" @click.outside="open = false" class="flex justify-between">
+                <p class="mb-8 mr-8 italic justify-start">{{item.description_html}}</p>
+                <span class="justify-end">({{item.time}})</span>
             </div>
         </li>
         {% endfor %}
-        <a href="{{page.heading.button-enroll.url}}">{{page.heading.button-enroll.text}}</a>
+        <div class="text-center">
+            <a href="{{page.heading.button-enroll.url}}" class="button">{{page.heading.button-enroll.text}}</a>
+        </div>
 </section>
