--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,6 +1,6 @@
-<section class="bg-image-style bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light">
+<section class="bg-image-style bg-overlay bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light">
     <div class="icon">
-        <img src="{{page.testimonials.icon_image}}" class="h-12">
+        <img src="/uploads/icons/manamei-17.png" class="h-12">
     </div>
     <div class="testimonial-container">
         {% for item in page.testimonials.testimonials %}
