--- a/_includes/investment.html
+++ b/_includes/investment.html
@@ -1,9 +1,9 @@
-<section>
-    <h2>{{page.investment.heading}}</h2>
-    <div class="grid col-span-3">
+<section class="bg-image-style bg-overlay p-10p" style="background-image: url('/uploads/backgrounds/manamei-1.png');">
+    <h2 class="heading-lg-sans text-feature text-center">{{page.investment.heading}}</h2>
+    <div class="grid grid-cols-3 gap-8">
         <!-- Includes -->
         <div class="col-span-2">
-            <h3>{{page.investment.includes.heading}}</h3>
+            <h3 class="uppercase text-2xl">{{page.investment.includes.heading}}</h3>
             <ul>
                 {% for item in page.investment.includes.list %}
                 <li>{{item.list-item}}</li>
@@ -12,11 +12,15 @@
         </div>
         <!-- Pricing Options -->
         <div>
-            <h3>{{page.investment.pricing.pay-in-full.heading}}</h3>
-            <span>{{page.investment.pricing.pay-in-full.price}}</span>
-            {% if page.investment.pricing.payment-plan.show == true %}
-            <h3>{{page.investment.pricing.payment-plan.heading}}</h3>
-            <span>{{page.investment.pricing.payment-plan.price}}</span>
+            <div class="mb-8">
+                <h3 class="uppercase text-2xl">{{page.investment.pricing.pay-in-full.heading}}</h3>
+                <span>{{page.investment.pricing.pay-in-full.price}}</span>
+                {% if page.investment.pricing.payment-plan.show == true %}
+            </div>
+            <div>
+                <h3 class="uppercase text-2xl">{{page.investment.pricing.payment-plan.heading}}</h3>
+                <span>{{page.investment.pricing.payment-plan.price}}</span>
+            </div>
             {% endif %}
         </div>
     </div>
