--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,17 +1,23 @@
-<section>
-    <h2>{{page.faq.heading}}</h2>
-    <ul class="list-none">
+<section class="p-10p bg-image-style"
+    style="background-image: url('{{page.faq.background-image.background_image}}'); background-position: {{page.faq.background-image.image_focus}};">
+    <h2 class="heading-lg-sans text-feature text-center">{{page.faq.heading}}</h2>
+    <ul class="dropdown-menu">
         {% for item in page.faq.questions-and-answers %}
-        <li x-data="{ open: false }" class="border-b border-dark my-8">
+        <li x-data="{ open: false }" class="dropdown-item {% if forloop.last %}last-item{% endif %}">
             <button @click="open = ! open" class="flex justify-between w-full">
-                <h3 class="text-left mb-8 mr-8">{{item.question}}</h3>
-
+                <h3 class="mr-8">{{item.question}}</h3>
                 <span x-show="!open">→</span>
                 <span x-show="open">&nbsp;&nbsp;↓</span>
             </button>
             <div x-show="open" @click.outside="open = false">
-                <p class="mb-8 mr-8 italic">{{item.answer_html}}</p>
+                {% assign paragraphs = item.answer_html | split: '<p>' %}
+                    {% for paragraph in paragraphs %}
+                    {% if paragraph != '' %}
+                <p class="mr-8 mt-4 italic {% if forloop.last %} last-paragraph {% endif %}">{{ paragraph | strip_html }}</p>
+                {% endif %}
+                {% endfor %}
             </div>
         </li>
         {% endfor %}
+    </ul>
 </section>
