--- a/_includes/inside-the-course.html
+++ b/_includes/inside-the-course.html
@@ -4,24 +4,30 @@
         <h2 class="heading-lg-sans text-feature">{{page.inside-the-course.heading}}</h2>
         <p>{{page.inside-the-course.description_html}}</p>
     </div>
-    <ul class="list-none">
+    <ul class="dropdown-menu">
         {% for item in page.inside-the-course.module %}
-        <li x-data="{ open: false }" class="border-b border-white my-8">
+        <li x-data="{ open: false }" class="dropdown-item {% if forloop.last %}last-item {% endif %}">
             <button @click="open = ! open" class="flex justify-between w-full">
-                <h3 class="text-left mb-8 mr-8">{{item.title}}</h3>
+                <h3 class="mr-8">{{item.title}}</h3>
 
                 <span x-show="!open">→</span>
                 <span x-show="open">&nbsp;&nbsp;↓</span>
             </button>
             <div x-show="open" @click.outside="open = false" class="flex justify-between">
-                <p class="mb-8 mr-8 italic justify-start">{{item.description_html}}</p>
-                {% if page.inside-the-course.module.time.show == true %}
-                <span class="justify-end">({{item.time.hours}}:{{item.time.minutes}})</span>
-                {% endif %}
+                <div class="justify-start">
+                    {% assign paragraphs = item.description_html | split: '<p>' %}
+                        {% for paragraph in paragraphs %}
+                        {% if paragraph != '' %}
+                    <p class="mr-8 italic {% if forloop.last %} last-paragraph{% endif %}">{{ paragraph | strip_html }}</p>
+                    {% endif %}
+                {% endfor %}
+                </div>
+                <div class="justify-end">({{page.inside-the-course.module.time.hours}}:{{page.inside-the-course.module.time.hours}})</div>
             </div>
         </li>
         {% endfor %}
-        <div class="text-center">
-            <a href="{{page.heading.button-enroll.url}}" class="button">{{page.heading.button-enroll.text}}</a>
-        </div>
+    </ul>
+    <div class="text-center mt-8">
+        <a href="{{page.heading.button-enroll.url}}" class="button">{{page.heading.button-enroll.text}}</a>
+    </div>
 </section>
