--- a/_includes/cta-course.html
+++ b/_includes/cta-course.html
@@ -1,5 +1,12 @@
-<section>
-    <h2>{{page.cta.heading}}</h2>
-    <p>{{page.cta.description_html}}</p>
-    <a href="{{page.cta.button.url}}">{{page.cta.button.text}}</a>
+<section class="p-10p bg-image-style bg-overlay"
+    style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
+    <div class="text-center">
+        <h2 class="text-lg-serif">{{page.cta.heading}}</h2>
+        <div class="px-10p">
+            <p>{{page.cta.description_html}}</p>
+        </div>
+    </div>
+    <div class="text-center mt-8">
+        <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
+    </div>
 </section>
