--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -943,6 +943,9 @@ ul {
 .p-5p {
   padding: 5%;
 }
+.p-20p {
+  padding: 20%;
+}
 .px-20p {
   padding-left: 20%;
   padding-right: 20%;
@@ -954,6 +957,10 @@ ul {
 .py-5p {
   padding-top: 5%;
   padding-bottom: 5%;
+}
+.px-10p {
+  padding-left: 10%;
+  padding-right: 10%;
 }
 .text-left {
   text-align: left;
