--- a/_includes/map.html
+++ b/_includes/map.html
@@ -3,8 +3,10 @@
     <p class="text-center">{{page.map.description}}</p>
     <div class="grid grid-cols-12">
         {% for item in page.map.offering %}
+        {% capture thecycle %}{% cycle 'left', 'right' %}{% endcapture %}
+        {% if thecycle == 'left' %}
         <div class="col-span-5 p-5p 
-        {% cycle 'text-right', 'text-left', 'text-right', 'text-left' %}">
+        {% cycle 'text-right', 'text-left' %}">
             <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
             <span class="lowercase text-feature">{{item.type}}</span>
             <p>{{item.description}}</p>
@@ -12,5 +14,17 @@
         </div>
         <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
         <div class="col-span-5"></div>
+        {% else %}
+        <div class="col-span-5"></div>
+
+        <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
+        <div class="col-span-5 p-5p 
+        {% cycle 'text-right', 'text-left' %}">
+            <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+            <span class="lowercase text-feature">{{item.type}}</span>
+            <p>{{item.description}}</p>
+            <a href="{{item.url}}" class="link">Learn more</a>
+        </div>
+        {% endif %}
         {% endfor %}
 </section>
