--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,4 +1,5 @@
-<section class="p-10p">
+<section class="p-10p"
+    style="background-image: url('/uploads/backgrounds/line.mana.png'); background-position: center;">
     <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
     <p class="text-center">{{page.map.description}}</p>
     <div class="grid grid-cols-12">
@@ -12,19 +13,28 @@
             <p>{{item.description}}</p>
             <a href="{{item.url}}" class="link">Learn more</a>
         </div>
-        <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
-        <div class="col-span-5"></div>
-        {% else %}
-        <div class="col-span-5"></div>
 
-        <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
-        <div class="col-span-5 p-5p 
-        {% cycle 'text-right', 'text-left' %}">
-            <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
-            <span class="lowercase text-feature">{{item.type}}</span>
-            <p>{{item.description}}</p>
-            <a href="{{item.url}}" class="link">Learn more</a>
+        <!-- icon -->
+        <!-- <div class="col-span-2 grid grid-cols-2">
+            <div class=col-span-2>
+                <img src={{item.image_path}} class="h-28">
+            </div>
         </div>
-        {% endif %}
-        {% endfor %}
+        <div class="border-r border-feature"></div>
+        <div></div> -->
+
+    <div class="col-span-5"></div>
+    {% else %}
+    <div class="col-span-5"></div>
+
+    <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
+    <div class="col-span-5 p-5p 
+        {% cycle 'text-right', 'text-left' %}">
+        <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+        <span class="lowercase text-feature">{{item.type}}</span>
+        <p>{{item.description}}</p>
+        <a href="{{item.url}}" class="link">Learn more</a>
+    </div>
+    {% endif %}
+    {% endfor %}
 </section>
