--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -723,6 +723,15 @@ ul {
 .col-span-5 {
   grid-column: span 5 / span 5;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.row-span-1 {
+  grid-row: span 1 / span 1;
+}
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
 .m-4 {
   margin: 1rem;
 }
@@ -809,6 +818,9 @@ ul {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .w-\[10vh\] {
   width: 10vh;
 }
@@ -817,6 +829,9 @@ ul {
 }
 .w-full {
   width: 100%;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -838,6 +853,12 @@ ul {
 }
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
+}
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+.flex-col {
+  flex-direction: column;
 }
 .items-center {
   align-items: center;
@@ -875,6 +896,10 @@ ul {
 .border-r {
   border-right-width: 1px;
 }
+.border-feature {
+  --tw-border-opacity: 1;
+  border-color: rgb(237 213 135 / var(--tw-border-opacity));
+}
 .border-light {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -883,9 +908,21 @@ ul {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
-.border-feature {
-  --tw-border-opacity: 1;
-  border-color: rgb(237 213 135 / var(--tw-border-opacity));
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
@@ -956,6 +993,9 @@ ul {
 .p-10p {
   padding: 10%;
 }
+.p-4 {
+  padding: 1rem;
+}
 .p-5p {
   padding: 5%;
 }
@@ -977,6 +1017,9 @@ ul {
 }
 .pt-10p {
   padding-top: 10%;
+}
+.pb-0 {
+  padding-bottom: 0px;
 }
 .text-left {
   text-align: left;
