--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,12 +1,11 @@
-<section class="p-10p"
-    style="background-image: url('/uploads/backgrounds/line.mana.png'); background-position: center;">
+<section class="p-10p pb-0">
     <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
     <p class="text-center">{{page.map.description}}</p>
-    <div class="grid grid-cols-12">
+    <div class="grid grid-cols-12 mt-12">
         {% for item in page.map.offering %}
         {% capture thecycle %}{% cycle 'left', 'right' %}{% endcapture %}
         {% if thecycle == 'left' %}
-        <div class="col-span-5 p-5p 
+        <div class="col-span-5 p-5p mb-12 
         {% cycle 'text-right', 'text-left' %}">
             <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
             <span class="lowercase text-feature">{{item.type}}</span>
@@ -15,26 +14,22 @@
         </div>
 
         <!-- icon -->
-        <!-- <div class="col-span-2 grid grid-cols-2">
-            <div class=col-span-2>
-                <img src={{item.image_path}} class="h-28">
-            </div>
+        <div class=col-span-2>
+            <img src={{item.image_path}} class="h-28">
         </div>
-        <div class="border-r border-feature"></div>
-        <div></div> -->
 
-    <div class="col-span-5"></div>
-    {% else %}
-    <div class="col-span-5"></div>
+        <div class="col-span-5"></div>
+        {% else %}
+        <div class="col-span-5"></div>
 
-    <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
-    <div class="col-span-5 p-5p 
+        <div class="col-span-2"><img src={{item.image_path}} class="h-28"></div>
+        <div class="col-span-5 p-5p 
         {% cycle 'text-right', 'text-left' %}">
-        <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
-        <span class="lowercase text-feature">{{item.type}}</span>
-        <p>{{item.description}}</p>
-        <a href="{{item.url}}" class="link">Learn more</a>
-    </div>
-    {% endif %}
-    {% endfor %}
+            <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+            <span class="lowercase text-feature">{{item.type}}</span>
+            <p>{{item.description}}</p>
+            <a href="{{item.url}}" class="link">Learn more</a>
+        </div>
+        {% endif %}
+        {% endfor %}
 </section>
