--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
     <!-- Footer -->
     {% include site-footer.html %}
 
+    <!-- Cookie Banner -->
+    {% include cookie-banner.html %}
+
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"
         integrity="sha512-Pqx0ZVocHCSzTLK4pm0GhccHtOT6fmZz+tqfYHV/llI60gB9sr9jkiqrqSEwFJIrzpcZEHPJjsq4GcC731UNXg=="
