--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -623,6 +623,17 @@ ul {
         opacity: 1;
         transition: 0.5s;
     }
+.button-cookies {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  text-transform: uppercase;
+}
 /* Images */
 .bg-image-style {
   background-size: cover;
@@ -723,20 +734,15 @@ ul {
 .col-span-5 {
   grid-column: span 5 / span 5;
 }
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-.row-span-1 {
-  grid-row: span 1 / span 1;
-}
-.row-span-2 {
-  grid-row: span 2 / span 2;
-}
 .m-4 {
   margin: 1rem;
 }
 .m-8 {
   margin: 2rem;
+}
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -757,6 +763,9 @@ ul {
 }
 .mb-8 {
   margin-bottom: 2rem;
+}
+.ml-4 {
+  margin-left: 1rem;
 }
 .mr-20p {
   margin-right: 20%;
@@ -818,9 +827,6 @@ ul {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
-.w-1\/2 {
-  width: 50%;
-}
 .w-\[10vh\] {
   width: 10vh;
 }
@@ -830,8 +836,8 @@ ul {
 .w-full {
   width: 100%;
 }
-.flex-1 {
-  flex: 1 1 0%;
+.cursor-pointer {
+  cursor: pointer;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -853,12 +859,6 @@ ul {
 }
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
-}
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-.flex-col {
-  flex-direction: column;
 }
 .items-center {
   align-items: center;
@@ -893,8 +893,8 @@ ul {
 .border-b {
   border-bottom-width: 1px;
 }
-.border-r {
-  border-right-width: 1px;
+.border-t {
+  border-top-width: 1px;
 }
 .border-feature {
   --tw-border-opacity: 1;
@@ -908,21 +908,9 @@ ul {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
-.bg-gray-200 {
+.bg-feature {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: rgb(237 213 135 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
@@ -993,11 +981,11 @@ ul {
 .p-10p {
   padding: 10%;
 }
-.p-4 {
-  padding: 1rem;
-}
 .p-5p {
   padding: 5%;
+}
+.p-8 {
+  padding: 2rem;
 }
 .px-10p {
   padding-left: 10%;
@@ -1015,11 +1003,11 @@ ul {
   padding-top: 5%;
   padding-bottom: 5%;
 }
-.pt-10p {
-  padding-top: 10%;
-}
 .pb-0 {
   padding-bottom: 0px;
+}
+.pt-10p {
+  padding-top: 10%;
 }
 .text-left {
   text-align: left;
@@ -1040,6 +1028,10 @@ ul {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1051,6 +1043,10 @@ ul {
 }
 .italic {
   font-style: italic;
+}
+.text-dark {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-feature {
   --tw-text-opacity: 1;
