--- a/style.css
+++ b/style.css
@@ -148,6 +148,10 @@
         transition: 0.5s;
     }
 
+    .button-cookies {
+        @apply mx-4 px-4 py-2 text-base uppercase
+    }
+
     /* Images */
     .bg-image-style {
         @apply bg-no-repeat bg-center bg-cover
