--- a/_includes/cookie-banner.html
+++ b/_includes/cookie-banner.html
@@ -1,16 +1,75 @@
 <div id="cookie-notice" class="p-8 border-t border-feature">
     <div class="flex justify-between">
         <div class="text-center">
-            <span>I value your privacy, and to provide the best possible experience, my website uses cookies. By accepting this agreement, you automatically consent to the use of cookies.</span>
+            <span>I value your privacy, and to provide the best possible experience, my website uses cookies. By
+                accepting this agreement, you automatically consent to the use of cookies.</span>
         </div>
         <div class="text-right text-lg cursor-pointer ml-4">
             <span id="close-cookie-banner">X</span>
         </div>
     </div>
     <div class="flex justify-center mt-4">
-        <a id="cookie-notice-accept" class="border border-feature bg-feature text-dark button-cookies cursor-pointer">Accept</a>
+        <a id="cookie-notice-accept"
+            class="border border-feature bg-feature text-dark button-cookies cursor-pointer">Accept</a>
         <a href="/cookie-policy.html" class="border border-light mx-4 button-cookies">Cookie Policy</a>
     </div>
 </div>
 
 <!-- Google tag (gtag.js) -->
+
+<!-- JS -->
+<script>
+    function createCookie(name, value, days) {
+        var expires = "";
+        if (days) {
+            var date = new Date();
+            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+            expires = "; expires=" + date.toUTCString();
+        }
+        document.cookie = name + "=" + value + expires + "; path=/";
+    }
+    function readCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+    }
+    function eraseCookie(name) {
+        createCookie(name, "", -1);
+    }
+
+    function runCookiedCodes() {
+        // Add tracking scripts here 
+        console.log("cookies ran")
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8NMVDSZJD4');
+        // End tracking scripts 
+    }
+
+    if (readCookie('cookie-notice-accepted') == 'true') {
+
+        runCookiedCodes()
+        //removes cookies while testing 
+        //eraseCookie('cookie-notice-accepted')
+    } else {
+        document.getElementById('cookie-notice').style.display = 'block';
+    }
+    document.getElementById('cookie-notice-accept').addEventListener("click", function () {
+        createCookie('cookie-notice-accepted', 'true', 31);
+        document.getElementById('cookie-notice').style.display = 'none';
+        runCookiedCodes()
+    });
+
+    document.querySelector("#close-cookie-banner").addEventListener("click", (e) => {
+
+        document.querySelector("#cookie-notice").style.display = 'none';
+    });
+
+</script>
